tests/ui/proc-macro/issue-38586.stderr
error[E0425]: cannot find value `foo` in the expanded code of `derive` macro `A`
  --> $DIR/issue-38586.rs:6:10
   |
LL | #[derive(A)]
   |          ^ `foo` not found in expanded code of this `derive` macro
   |
   = note: this error originates in the derive macro `A` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
